force-app/main/default/objects/Drawloop_DDP_Settings__c/Drawloop_DDP_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Drawloop DDP Settings</label>
</CustomObject>