force-app/main/default/objects/Drawloop_DDP_Settings__c/fields/Client_Information_Update_Form_DDP__c.field-meta.xml
<CustomField>
    <fullName>Client_Information_Update_Form_DDP__c</fullName>
    <label>Client Information Update Form DDP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>