force-app/main/default/objects/Drawloop_DDP_Settings__c/fields/ClientSnapshotDetail_DDP__c.field-meta.xml
<CustomField>
    <fullName>ClientSnapshotDetail_DDP__c</fullName>
    <label>Client Snapshot Detail DDP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>