force-app/main/default/objects/Drawloop_DDP_Settings__c/fields/CMPA_Australia_Email_Delivery__c.field-meta.xml
<CustomField>
    <fullName>CMPA_Australia_Email_Delivery__c</fullName>
    <label>CMPA Australia Email Delivery</label>
    <length>15</length>
    <type>Text</type>
</CustomField>