force-app/main/default/objects/Drawloop_DDP_Settings__c/fields/CMPA_DDP__c.field-meta.xml
<CustomField>
    <fullName>CMPA_DDP__c</fullName>
    <label>CMPA DDP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>