force-app/main/default/objects/Drawloop_DDP_Settings__c/fields/CMPA_Rest_of_World_Email_Delivery__c.field-meta.xml
<CustomField>
    <fullName>CMPA_Rest_of_World_Email_Delivery__c</fullName>
    <label>CMPA Rest of World Email Delivery</label>
    <length>15</length>
    <type>Text</type>
</CustomField>