force-app/main/default/objects/Drawloop_DDP_Settings__c/fields/Document_Template_DDP__c.field-meta.xml
<CustomField>
    <fullName>Document_Template_DDP__c</fullName>
    <label>Document Template DDP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>