force-app/main/default/objects/Drawloop_DDP_Settings__c/fields/Email_Client_Agreement_DDP__c.field-meta.xml
<CustomField>
    <fullName>Email_Client_Agreement_DDP__c</fullName>
    <label>Email Client Agreement DDP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>